<resources>
    <string name="app_name">OneRoofIt</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">One Roof It Solution</string>
    <string name="nav_header_subtitle">sales@oneroofit.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_services">Services</string>
    <string name="menu_career">Career</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_about">About</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset you?</string>
    <string name="menu_our_team">Our Team</string>
    <string name="menu_contact_act">ContAct</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_profile">Profile</string>

</resources>