<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:iconTint="#000"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_service"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_career"
            android:icon="@drawable/ic_career"
            android:title="@string/menu_career" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/nav_contact"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_our_team"
            android:icon="@drawable/our_team_icon"
            android:title="@string/menu_our_team" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/menu_privacy_policy" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="Other">
            <menu >
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="Logout" />
            </menu>
        </item>
    </group>

</menu>